fix background image on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
 body {
   background-attachment: fixed;
+  background-color: rgb(39, 39, 39);
   background-image: url("./images/portfolio-main.jpg");
   background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
   sans-serif;
+  height: 100vh;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
